1999-10-04  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mime-view.el (mime-preview-move-to-next): Attempt to go to the
	next page if the return value of `next-single-property-change' is
	greater than `point-max'.
	(mime-preview-move-to-previous): Don't move backward at the
	beginning of the buffer; attempt to go to the previous page if the
	return value of `previous-single-property-change' is less than
	`point-min'.

1999-09-29  MORIOKA Tomohiko  <tomo@m17n.org>

	* mime-view.el (mime-display-multipart/mixed): Share cell of
	`major-mode'.
	(mime-display-multipart/alternative): Likewise.
	(mime-display-entity): Refer `major-mode' value of a situation
	instead of buffer-local-variable `major-mode'.

1999-09-29  MORIOKA Tomohiko  <tomo@m17n.org>

	* mime-play.el (mime-preview-play-current-entity): Use
	text-property `mime-view-situation' as the initial value of
	acting-situation to add major-mode.

1999-09-29  MORIOKA Tomohiko  <tomo@m17n.org>

	* mime-edit.el (mime-content-types): Delete text/x-rot13-47-48 in
	default definition. [cf. <tm-ja:4904>, <tm-ja:4907>]

1999-09-27  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mime-edit.el (mime-edit-user-agent-value): Include
	`emacs-patch-level'.  It exists in XEmacs 21.1.1 or later.

1999-09-20  Yoshiki Hayashi <t90553@mail.ecc.u-tokyo.ac.jp>

	* mime-view.el (mime-preview-scroll-up-entitiy,
	mime-preview-scroll-down-entity): Use scroll-up and scroll-down
	instead of forward-line.
	(mime-preview-next-line-entity,
	mime-preview-previous-line-entity): Add optional argument LINES
	and scroll LINES lines if specified. Add doc-string.


1999-09-13  MORIOKA Tomohiko  <tomo@m17n.org>

	* SEMI: Version 1.13.6 (Komatsu) released.

1999-08-30  MORIOKA Tomohiko  <tomo@m17n.org>

	* mime-edit.el (mime-edit-mime-version-field-for-message/partial):
	Encode `mime-edit-version'.

1999-08-28  MORIOKA Tomohiko  <tomo@m17n.org>

	* mime-play.el (mime-store-message/partial-piece): Use
	`directory-files' to check number of pieces.
